chevalley bases talk finished

--- a/main.tex
+++ b/main.tex
@@ -132,7 +132,7 @@
 \author{Albert Lopez Bruch}
 
 \begin{document}
-	\maketitle
+	%\maketitle
 	\pagenumbering{arabic}
 	
     \iffalse\section{The Weyl Group}\label{chp:weylgroup}
